[gd_scene load_steps=14 format=3 uid="uid://mainscene"]
[ext_resource path="res://scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource(1)

[node name="BlocksContainer" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="HUD" type="CanvasLayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HeightLabel" type="Label" parent="HUD"]
text = "Height: 0"
anchor_right = 0.25
anchor_top = 0.0
margin_left = 10
margin_top = 10
theme_font_override/font_size = 20
theme_font_override/font_color = Color(1,1,1)

[node name="SpeedLabel" type="Label" parent="HUD"]
text = "Speed: 200"
anchor_right = 0.25
anchor_top = 0.0
margin_left = 150
margin_top = 10
theme_font_override/font_size = 20
theme_font_override/font_color = Color(1,1,1)

[node name="CurrentScoreLabel" type="Label" parent="HUD"]
text = "Score: 0"
anchor_right = 0.25
anchor_top = 0.0
margin_left = 300
margin_top = 10
theme_font_override/font_size = 20
theme_font_override/font_color = Color(1,1,1)

[node name="HighScoreLabel" type="Label" parent="HUD"]
text = "Best: 0"
anchor_right = 0.25
anchor_top = 0.0
margin_left = 450
margin_top = 10
theme_font_override/font_size = 20
theme_font_override/font_color = Color(1,1,1)